@@ -342,11 +342,12 @@ class BaseDropdownMenuButton(Button):
 class ButtonWithDropdownFromHook(BaseDropdownMenuButton):
     template_name = 'wagtailadmin/pages/listing/_button_with_dropdown.html'
 
-    def __init__(self, label, hook_name, page, page_perms, is_parent, **kwargs):
+    def __init__(self, label, hook_name, page, page_perms, is_parent, next_url=None, **kwargs):
         self.hook_name = hook_name
         self.page = page
         self.page_perms = page_perms
         self.is_parent = is_parent
+        self.next_url = next_url
 
         super().__init__(label, **kwargs)
 
@@ -358,5 +359,5 @@ class ButtonWithDropdownFromHook(BaseDropdownMenuButton):
     def dropdown_buttons(self):
         button_hooks = hooks.get_hooks(self.hook_name)
         return sorted(itertools.chain.from_iterable(
-            hook(self.page, self.page_perms, self.is_parent)
+            hook(self.page, self.page_perms, self.is_parent, self.next_url)
             for hook in button_hooks))
